--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ body {
     background-image: url(images/donation8.jpg);
     background-repeat: no-repeat;
     width: 1200px;
-    height: 800px;
+    height: 700px;
     color: rgb(213, 226, 217);
     text-align: center;
-    margin-left: 20px;
+    margin-left: 70px;
     
 }
 
@@ -37,24 +37,113 @@ body {
     font-size: 20px;
 }
 
-#donation-amount {
+.choose-amount {
+    display: flex;
+    margin-left: 200px;
+}
+
+.donation-amount-content {
     text-align: center;
 }
 
-.choose-amount {
-    display: inline;
+.donation-amount-content h1 {
+    font-size: 50px;
+    font-weight: 800;
+}
+
+.donation-amount-content p{
+    font-size: 20px;
+    font-weight: 700;
+    color: rgba(128, 128, 128, 0.747);
+}
+
+.choose-amount div {
+    padding: 40px;
+    background-color: rgba(128, 128, 128, 0.158);
+    margin: 0 10px 10px;
+    font-size: 30px;
+    font-weight: 900;
+}
+
+.default-amount {
+    border: 2px solid tomato;
+    border-radius: 5px;
+    color: tomato;
+
+}
+
+#other-amount {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 2px solid grey;
+    font-size: 20px;
+    color: rgba(128, 128, 128, 0.452);
+    margin-top: 40px;
+    width: 400px;
+    text-align: center;
+}
+
+#submit-button {
+    padding: 20px 30px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    background-color: rgb(11, 153, 248);
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+}
+
+.plan-content {
+    text-align: center;
+
+}
+
+.plan-content h1 {
+    font-size: 50px;
+    font-weight: 800;
+
+}
+
+#donation-plan {
+    margin: 70px 20px;
 }
 
 .donation-plan-list {
     display: flex;
 }
 
+.donation-plan-list img {
+    padding: 0 35%;
+}
+
+.family-plan {
+    background-color: bisque;
+    height: 350px;
+    margin-right: 20px;
+    padding: 15px;
+}
+
+.shelter-plan {
+    background-color: azure;
+    height: 350px;
+    margin-right: 20px;
+    padding: 15px;
+}
+
+.education-plan {
+    background-color: aquamarine;
+    height: 350px;
+    padding: 15px;
+}
+
 #volunteer {
     display: flex;
     background-color: wheat;
     width: 80%;
-    margin-left: 100px;
-    margin-top: 30px;
+    margin: 100px;
     color: rgb(92, 90, 90);
 }
 
@@ -119,6 +208,49 @@ body {
     padding: 0 13px;
 }
 
-#subscription {
+
+#subscription h1 {
+    font-size: 45px;
     text-align: center;
+}
+
+#subscription p{
+    font-size: 20px;
+    font-weight: 600;
+    text-align:center ;
+}
+
+#subscription-form {
+    background-color: antiquewhite;
+    padding: 100px;
+    width: 500px;
+    margin: 0 300px;
+    text-align: center;
+}
+
+#email-form {
+    padding: 15px;
+    font-size: 20px;
+    border: none;
+    border-radius: 2px;
+    background-color: rgba(128, 128, 128, 0.562);
+}
+
+#email-submit {
+    padding: 18px;
+    font-size: 20;
+    font-weight: 800;
+    color: white;
+    text-align: center;
+    background-color: tomato;
+    border: none;
+}
+
+#footer {
+    background-color: rgb(21, 26, 26);
+    color: white;
+    text-align: center;
+    margin: 100px 0 0 0;
+    padding: 20px 0;
+
 }
